# hlbsp-converter

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: bsp-converter.cpp  bsp-converter.h  config.h  gltf_export.cpp  gltf_export.h  hlbsp.cpp  hlbsp.h  lightmap.cpp  lightmap.h  map.cpp  map.h  mip_texture.cpp  parser.cpp  parser.h  sourcebsp.cpp  sourcebsp.h  texture.cpp  texture.h  vector_math.h  vpk.cpp  vpk.h  vtf.h  vtf_texture.cpp  wad.cpp  wad.h
useful stuff/Blender/io_scene_gltf_lightmap/: __init__.py
useful stuff/Unity/: lightmapped_hlbsp.shader  lightmapped_unlit.shader
